--- a/public/css/main.css
+++ b/public/css/main.css
@@ -24,6 +24,13 @@ body {
     background-color: var(--bg-color);
     color: var(--txt-color);
 }
+main {
+    padding: 30px 60px;
+}
+section {
+    margin: 0;
+    padding: 30px 0;
+}
 
 .tag {
     padding: 5px 10px;
@@ -34,6 +41,22 @@ body {
 .tag-info {
     background-color: var(--info-color);
     color: var(--txt-color);
+}
+
+.notif {
+    margin-bottom: 10px;
+    padding: 10px 20px;
+    border-radius: 5px;
+    font-size: 14px;
+    transition: var(--transition);
+}
+.notif-success {
+    background-color: var(--success-color);
+    color: var(--bg-color);
+}
+.notif-danger {
+    background-color: var(--danger-color);
+    color: var(--bg-color);
 }
 
 .btn {
@@ -58,6 +81,38 @@ body {
 }
 .btn:hover {
     filter: brightness(.8);
+}
+
+form {
+    margin: 20px 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    gap: 20px;
+}
+form .form-group {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 5px;
+    width: 100%;
+}
+form .form-group label {
+    font-size: 15px;
+    font-weight: 500;
+    color: var(--primary-color);
+}
+form .form-group .form-control {
+    padding: 10px;
+    border-radius: 5px;
+    border: 1px solid var(--info-color);
+    background-color: var(--bg-color);
+    color: var(--txt-color);
+    font-size: 14px;
+    font-weight: 500;
+    resize: none;
+    transition: var(--transition);
 }
 
 /* ---------{ Barre de navigation }--------- */
@@ -109,7 +164,6 @@ section.pokemons {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     grid-gap: 30px;
-    padding: 30px 60px;
     justify-content: center;
     align-items: center;
 }
