--- a/public/css/main.css
+++ b/public/css/main.css
@@ -147,11 +147,12 @@ header nav ul {
     list-style: none;
 }
 header nav ul li {
-    padding: 20px 30px;
+    padding: 20px;
 }
 header nav ul li a {
     text-decoration: none;
     color: var(--primary-color);
+    font-size: 15px;
     font-weight: 500;
     transition: var(--transition);
 }
