TP8 - 1.4 : Gestion des champs obligatoires avec levée d'exceptions

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -103,6 +103,10 @@ form .form-group label {
     font-weight: 500;
     color: var(--primary-color);
 }
+form .form-group label:has(~ [required]):after {
+    content: ' *';
+    color: var(--danger-color);
+}
 form .form-group .form-control {
     padding: 10px;
     border-radius: 5px;
