--- a/public/css/main.css
+++ b/public/css/main.css
@@ -166,21 +166,24 @@ header nav ul li a:hover {
 
 /* ---------{ Liste des pokémons }--------- */
 section.pokemons {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    grid-gap: 30px;
-    justify-content: center;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
     align-items: center;
+    flex-wrap: wrap;
+    gap: 20px;
 }
 section.pokemons .pokemon {
-    margin: 0;
+    display: inline-block;
+    margin: 10px 0;
     padding: 20px;
     text-align: center;
     border-radius: 20px;
     background-color: var(--bg-color);
     box-shadow: var(--shadow);
     transition: var(--transition);
-    max-width: 450px;
+    min-width: 250px;
+    max-width: 350px;
 }
 section.pokemons .pokemon img {
     width: 100%;
