TP8 - 4 (Bonus) : Amélioration du système de notifications (erreurs, succès, etc...)

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -50,6 +50,14 @@ section {
     font-size: 14px;
     transition: var(--transition);
 }
+.notif h2 {
+    margin-bottom: 5px;
+    font-size: 16px;
+    font-weight: 500;
+}
+.notif p {
+    font-size: 14px;
+}
 .notif-success {
     background-color: var(--success-color);
     color: var(--bg-color);
